# leptos_ws

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.VSCodeCounter/2024-07-15_10-49-34/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: rust.yml
.zed/: settings.json
examples/axum/: .gitignore  Cargo.toml  README.md
examples/axum/.zed/: settings.json
examples/axum/src/: app.rs  fileserv.rs  main.rs
examples/demo-axum/: .gitignore  Cargo.toml  README.md
examples/demo-axum/src/: app.rs  fileserv.rs  main.rs  messages.rs
examples/demo-axum/style/: main.scss
src/: axum.rs  client_signal.rs  client_signals.rs  error.rs  lib.rs  messages.rs  server_signal.rs  server_signals.rs  traits.rs  ws_signals.rs
src/bidirectional/: client.rs  mod.rs  server.rs
src/channel/: client.rs  mod.rs  server.rs
src/read_only/: client.rs  mod.rs  server.rs
