[package]
name = "leptos_ws"
version = "0.8.0-rc2"
edition = "2021"
license = "MIT"
authors = ["Tim Persigehl <dev@timtom2016.com>"]
description = "Leptos WS is a Websocket for the Leptos framework to support updates coordinated from the Server "
documentation = "https://docs.rs/leptos_ws/latest/"
repository = "https://github.com/TimTom2016/leptos_ws"
keywords = ["leptos", "websocket", "server", "signal"]
categories = [
    "wasm",
    "web-programming",
    "web-programming::http-client",
    "web-programming::http-server",
    "web-programming::websocket",
]
readme = "README.md"

[dependencies]
json-patch = "4.0.0"
leptos = { version = "0.8.0-rc2", default-features = false }
leptos-use = { version = "0.16.0-beta", default-features = false, features = [
    "use_websocket",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "2.0" }
async-trait = "0.1"

# Axum
axum = { version = "0.8", default-features = false, features = [
    "ws",
], optional = true }
futures = { version = "0.3", default-features = false, optional = true }
codee = { version = "0.3", features = ["json_serde"] }
tokio = { version = "1.38.0", optional = true, features = ["rt-multi-thread"] }

[features]
default = []
ssr = ["leptos/ssr", "dep:tokio", "dep:futures"]
axum = ["dep:axum"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
