[package]
name = "leptos_ws"
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Tim Persigehl <dev@timtom2016.com>"]
description = "Leptos WS is a Websocket for the Leptos framework to support updates coordinated from the Server "
documentation = "https://docs.rs/leptos_ws/latest/"
repository = "https://github.com/TimTom2016/leptos_ws"
keywords = ["leptos", "websocket", "server", "signal"]
categories = [
    "wasm",
    "web-programming",
    "web-programming::http-client",
    "web-programming::http-server",
    "web-programming::websocket",
]
readme = "README.md"

[dependencies]
json-patch = "4.0.0"
leptos = { version = "0.8.0", default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "2.0" }
async-trait = "0.1"

futures = { version = "0.3", default-features = false}
tokio = { version = "1.38.0", features = ["sync"] }
dashmap = "6.1.0"
nanoid = {version= "0.4.0", optional = true}

[features]
default = []
ssr = ["leptos/ssr", "dep:nanoid","tokio/rt-multi-thread"]
csr = ["leptos/csr",]
hydrate = ["leptos/hydrate",]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
